--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -353,7 +353,7 @@ ul{
   /* grid-template-columns: repeat(6, 1fr) 2fr;
   grid-template-rows: repeat(7, 50px); */
   margin: 30px 0 30px 0;
-  padding: 0 50px 0 50px;
+  padding: 0 100px 0 100px;
 }
 
 .coffee-user-icon{
@@ -393,10 +393,6 @@ ul{
 }
 .coffee-link, .coffee-subheading{
 margin-top: 0;
-}
-
-.coffee-subheading{
-  text-align: center;
 }
 
 .comma-icon{
@@ -471,10 +467,17 @@ margin-top: 0;
   align-self: flex-end;
 }
 
+.reviews-wrapper{
+  padding: 0 150px 0 150px;
+}
+
 @media(max-width:1719px){
 
   .show-coffee-button-row{
     align-self: flex-start;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
   }
 
   .new-coffee-text-area{
@@ -485,17 +488,17 @@ margin-top: 0;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin: 30px 0 30px 0;
-      padding: 0;
+      /* margin: 30px 0 30px 0; */
+      /* padding: 0; */
     }
   
   .coffee-card-img{
-    margin: 0 0 20px 0;
+    margin: 0;
     height: 175px;
   }
-}
-
-@media(max-width:1618px){
+  .reviews-wrapper{
+    padding: 0 100px 0 100px;
+  }
   .coffee-card{
     flex-direction: column;
     gap:20px;
@@ -514,7 +517,134 @@ margin-top: 0;
   }
 }
 
-@media(max-width:510px){
+.delete-favourite-form-wrapper{
+  margin: 0 auto 0 0;
+  text-align: center;
+}
+
+.review-button-row{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-self: flex-end;
+}
+
+.review-card{
+  margin: 30px 0 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 20px;
+  margin: 30px 0 30px 0;
+  padding: 0 50px 0 50px;
+}
+
+
+.edit-review-form-flex-container{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.review-card-left-column{
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: flex-start;
+  /* max-width: 10%; */
+}
+
+.review-card-middle-column{
+  align-self: flex-start;
+  width: 100%;
+}
+
+.review-btn{
+  display: flex;
+  align-self: flex-start;
+  font-size: 0.8rem;
+  height: 30px;
+  width: 160px;
+  border: none;
+  border-radius: 4px;
+  margin: 10px 10px 0 0;
+}
+
+@media(max-width:501px){
+
+  .review-content{
+    text-align: center;
+  }
+
+  .review-card-left-column{
+    display: flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .review-card-middle-column{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    flex-direction: column;
+  }
+
+  .edit-review-form-flex-container{
+    flex-direction: column;
+  }
+
+  .review-card{
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .review-button-row{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .review-btn{
+     align-self: center;
+  }
+
+  .delete-favourite-form-wrapper{
+    margin: 0 auto;
+  }
+
+  .delete-favourite-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .show-coffee-button-row{
+    align-self: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .coffee-card{
+    padding: 0 20px 0 20px;
+  }
+
+  .show-coffee-wrapper{
+    padding: 50px 50px 50px 50px;
+  }
+
+  .reviews-wrapper{
+    padding: 0 20px 0 20px;
+  }
+
   .coffee-card{
     justify-content: center;
     flex-direction: row;
@@ -530,6 +660,8 @@ margin-top: 0;
     justify-content: center;
     align-items: center;
     font-size: 0.6rem;
+    width: 100%;
+    text-align: center;
   }
   .coffee-user-icon{
     margin: 0;
@@ -616,20 +748,53 @@ margin-top: 0;
 }
 
 @media (max-width:1420px){
+
   .new-coffee-ratings-wrapper{
     align-items: flex-start;
     width: 95%;
 }
 
+.new-review-text-area{
+  width: 50%;
+}
+
+.edit-review-txt-area{
+  opacity: 80%;
+  background-color: var(--main-white);
+  border-radius: 5px;
+  font: 1.2rem 'Lato', arial, sans-serif;
+  width: 50%;
+}
+}
+
+.review-card-user-img{
+  height: 75px;
+}
+
 @media (max-width:1080px){
+
+  .review-card-user-img, .edit-review-user-img{
+    height: 50px;
+  }
+
+  .edit-review-txt-area{
+    width: 80%;
+  }
+
   .new-coffee-ratings-wrapper{
     flex-direction: column;
     justify-content: space-between;
     align-items:center;
   }
+  .new-review-text-area{
+    width: 80%;
+  }
+
+  .reviews-wrapper{
+    padding: 0 20px 0 20px;
+  }
 }
 
-}
 
 .new-coffee-label{
   font-size: 1.5rem;
@@ -707,11 +872,6 @@ margin-top: 0;
   opacity: 80%;
 }
 
-.delete-favourite-form-wrapper{
-  margin: 0 auto 0 0;
-  text-align: center;
-}
-
 .delete-favourite-btn{
   display: flex;
   align-self: flex-start;
@@ -765,18 +925,16 @@ margin-top: 0;
   border: none;
   border-bottom: solid 2px var(--main-white);
   opacity: 80%;
-  width: 84.2%;
+  width: 84.5%;
   margin: 0 auto;
   text-align: center;
 }
 
-.review-card{
-  margin: 30px 0 30px 0;
+.new-coffee-review-form{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 100%;
-  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .review-content > .comma-icon{
@@ -784,50 +942,9 @@ margin-top: 0;
 }
 
 
-.reviews-wrapper{
-  padding: 0 150px 0 150px;
-}
-
-.review-card-left-column{
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: flex-start;
-  max-width: 10%;
-}
-
-.review-card-middle-column{
-  
-  align-self: flex-start;
-}
-
-.review-button-row{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-self: flex-end;
-}
-
-.review-btn{
-  display: flex;
-  align-self: flex-start;
-  font-size: 0.8rem;
-  height: 30px;
-  width: 160px;
-  border: none;
-  border-radius: 4px;
-  margin: 10px 10px 0 0;
-}
-
 .edit-form-container{
   margin: 30px 0 30px 0;
-}
-
-.edit-review-form-flex-container{
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 20px;
+  padding: 0 50px 0 50px;
 }
 
 .edit-review-left-column{
@@ -868,12 +985,6 @@ margin-top: 0;
   margin: 10px 0 10px 0;
 }
 
-.edit-review-txt-area{
-  opacity: 80%;
-  background-color: var(--main-white);
-  border-radius: 5px;
-  font: 1.2rem 'Lato', arial, sans-serif;
-}
 
 @media (max-width: 770px){
   .nav-search-wrapper{
