--- a/views/coffee/results.ejs
+++ b/views/coffee/results.ejs
@@ -1,23 +1,41 @@
 <%- include('../partials/header') %>
 
-<% if (coffees.length) { %>
-  <% coffees.forEach((coffee) => { %>
-
-    <div class="coffee-card">
-      <hr>
-      <img class="google-icon"src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
-      <a href="/coffee/<%= coffee._id %>"><h1><%= coffee.name %></h1></a>
-      <h2><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
-      <h4>Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
-      <p><%= coffee.initReview %></p>
-      <h3>Aroma: <%= coffee.aroma %> </h3><h3>Acidity: <%= coffee.acidity %></h3><h3>Body: <%= coffee.bodyRating %> </h3><h3>Balance: <%= coffee.balance %></h3><h3>Sweetness: <%= coffee.sweetness %></h3>
-      <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
-      <h3>Overall: <%= total %> /100</h3>
-
-      <img class="coffee-img" src="<%= coffee.imageUrl %>" alt="coffee image">
-    </div>
-  <% }) %>
-<% } else { %>
-  <p>No coffees found. Try again with different keywords.</p>
-<%}%>
+<div class="results-wrapper">
+  <% if (coffees.length) { %>
+    <% coffees.forEach((coffee) => { %>
+      <hr class="coffee-card-hr">
+      <div class="coffee-card">
+  
+        <img class="coffee-user-icon"src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
+  
+          <div class="coffee-card-heading-wrapper">
+            <a class="coffee-link" href="/coffee/<%= coffee._id %>"><h1 class="coffee-card-name-heading"><%= coffee.name %></h1></a>
+            <h2 class="coffee-subheading"><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
+            <h4 class="coffee-card-user">Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
+          </div>
+  
+          <div class="coffee-card-middle-column">
+            <p class="coffee-card-review"><img class="comma-icon" src="/images/comma-ish-glyph-svgrepo-com.svg" alt=""><br><%= coffee.initReview %></p>
+  
+            <div class="scores-wrapper">
+               <h3 class="coffee-card-aroma">Aroma: <%= coffee.aroma %> </h3>
+               <h3 class="coffee-card-acidity">Acidity: <%= coffee.acidity %></h3>
+               <h3 class="coffee-card-body">Body: <%= coffee.bodyRating %> </h3>
+               <h3 class="coffee-card-balance">Balance: <%= coffee.balance %></h3>
+               <h3 class="coffee-card-sweetness">Sweetness: <%= coffee.sweetness %></h3>
+               <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
+               <h3 class="coffee-card-overall">Overall: <%= total %> /100</h3>
+            </div>
+  
+          </div>
+  
+          <div class="coffee-card-image-wrapper"><img class="coffee-card-img" src="<%= coffee.imageUrl %>" alt="coffee image"></div>
+  
+  
+      </div>
+    <% }) %>
+  <% } else { %>
+    <p class="error-txt">No coffees found. Try again with different keywords.</p>
+  <%}%>
+</div>
 <%- include('../partials/footer') %>
